--- a/AriaSdk/app/src/main/AndroidManifest.xml
+++ b/AriaSdk/app/src/main/AndroidManifest.xml
@@ -1,3 +1,6 @@
-<manifest package="com.deus_tech.ariasdk">
-
+<manifest
+    package="com.deus_tech.ariasdk"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 </manifest>
