--- a/Aria/wear/src/main/AndroidManifest.xml
+++ b/Aria/wear/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
                 <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
             </intent-filter>
         </service>
+        <service android:name=".ariaservice.AriaService"
+            android:exported="false"/>
 
     </application>
 
